--- a/en/obchod.html
+++ b/en/obchod.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="../simple-grid.min.css">
         <link rel="stylesheet" href="../style.css?v=47">
+        <link rel="stylesheet" href="../mobile-styles.css?v=2">
         <script type="text/javascript" src="../script.js?v=11"></script>
         <script type="text/javascript" src="../qrcode.min.js"></script>
         <script>
@@ -41,9 +42,10 @@
                 });
             });
         </script>
-    </head>
-    <body>
 
+    </head>
+
+    <body>
         <div class="hamburger-menu">
             <div class="language-switcher">
                 <a href="../obchod.html" class="lang-flag" data-lang="cs" title="Přepnout do češtiny">
@@ -112,6 +114,7 @@
                 />
               </a>
             </div>
+
 
 
 
@@ -236,5 +239,6 @@
                     <img src="../img/ig_white.svg" height="40" alt="Instagram Japanese Calligraphy Petra Vitásková">
                 </a>
         </footer>
+
     </body>
 </html>
