--- a/en/index.html
+++ b/en/index.html
@@ -98,7 +98,7 @@
           />
         </a>
         <a class="social email-icon" href="">
-          <img src="../img/mail_black.svg" height="40" alt="Email" />
+          <img src="../img/mail_white.svg" height="40" alt="Email" />
         </a>
       </div>
       <div class="container">
