--- a/vystavy.html
+++ b/vystavy.html
@@ -82,7 +82,7 @@
           />
         </a>
         <a class="social email-icon" href="">
-          <img src="img/mail_black.svg" height="40" alt="Email" />
+          <img src="img/mail_white.svg" height="40" alt="Email" />
         </a>
       </div>
 
@@ -190,7 +190,7 @@
         </div>
       </div>
 
- 
+
       <div class="col-6 kontakt m-p-g " >
             <img src="img/vystava2025_01.jpg" alt="plakát výstava Zvuk štetce, 2025" />
             <img src="img/vystava2025_02.jpg" alt="plakát výstava Brána Ticha, 2025" />
@@ -205,8 +205,8 @@
             <img src="img/vystava2021_01.jpg" alt="plakát výstava Prostor, 2021" />
             <img src="img/vystava2020_01.jpg" alt="plakát výstava Iroha, 2020" />
       </div>
-          
-        
+
+
 
     </main>
 
