--- a/en/galerie.html
+++ b/en/galerie.html
@@ -278,7 +278,7 @@
           />
         </a>
         <a class="social email-icon" href="">
-          <img src="../img/mail_black.svg" height="40" alt="Email" />
+          <img src="../img/mail_white.svg" height="40" alt="Email" />
         </a>
       </div>
 
