--- a/en/vystavy.html
+++ b/en/vystavy.html
@@ -82,7 +82,7 @@
           />
         </a>
         <a class="social email-icon" href="">
-          <img src="../img/mail_black.svg" height="40" alt="Email" />
+          <img src="../img/mail_white.svg" height="40" alt="Email" />
         </a>
       </div>
 
