menu a jazyky samostatna komponenta

--- a/kontakt.html
+++ b/kontakt.html
@@ -7,55 +7,10 @@
     <link rel="stylesheet" href="style.css?v=47" />
     <link rel="stylesheet" href="mobile-styles.css?v=2" />
     <script type="text/javascript" src="script.js?v=11"></script>
+    <script type="text/javascript" src="menu.js?v=1"></script>
   </head>
   <body>
-    <div class="hamburger-menu">
-      <div class="language-switcher">
-        <a
-          href="en/kontakt.html"
-          class="lang-flag"
-          data-lang="en"
-          title="Switch to English"
-        >
-          <img src="img/001-united-kingdom.svg" height="24" alt="English" />
-        </a>
-      </div>
-      <button class="hamburger" id="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-      <nav class="menu-overlay" id="menuOverlay">
-        <ul>
-          <li><a href="index.html">O mě</a></li>
-          <li><a href="obchod.html">Obchod</a></li>
-          <li><a href="vystavy.html">Výstavy</a></li>
-          <li><a href="galerie.html">Galerie</a></li>
-          <li><a href="skola.html">Škola Iroha</a></li>
-          <li><a href="kontakt.html">Kontakt</a></li>
-          <li class="menu-social">
-            <a class="social email-icon" href="">
-              <img src="img/mail_black.svg" height="30" alt="Email" />
-            </a>
-            <a
-              target="_blank"
-              class="social"
-              href="https://facebook.com/KurzyJaponskeKaligrafie"
-            >
-              <img src="img/fb_black.svg" height="30" alt="Facebook" />
-            </a>
-            <a
-              target="_blank"
-              class="social"
-              href="https://instagram.com/petra.vitaskova"
-            >
-              <img src="img/ig_black.svg" height="30" alt="Instagram" />
-            </a>
-          </li>
-          <li><a href="#" class="menu-close">×</a></li>
-        </ul>
-      </nav>
-    </div>
+    <div id="menu-root"></div>
 
     <main>
       <div class="contact">
