--- a/en/index.html
+++ b/en/index.html
@@ -7,55 +7,10 @@
     <link rel="stylesheet" href="../style.css?v=47" />
     <link rel="stylesheet" href="../mobile-styles.css?v=2" />
     <script type="text/javascript" src="../script.js?v=11"></script>
+    <script type="text/javascript" src="../menu.js?v=1"></script>
   </head>
   <body>
-    <div class="hamburger-menu">
-      <div class="language-switcher">
-        <a
-          href="../index.html"
-          class="lang-flag"
-          data-lang="cs"
-          title="Přepnout do češtiny"
-        >
-          <img src="../img/002-czech-republic.svg" height="24" alt="Čeština" />
-        </a>
-      </div>
-      <button class="hamburger" id="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-      <nav class="menu-overlay" id="menuOverlay">
-        <ul>
-          <li><a href="index.html">About Me</a></li>
-          <li><a href="obchod.html">Shop</a></li>
-          <li><a href="vystavy.html">Exhibitions</a></li>
-          <li><a href="galerie.html">Gallery</a></li>
-          <li><a href="skola.html">Iroha school</a></li>
-          <li><a href="kontakt.html">Contact</a></li>
-          <li class="menu-social">
-            <a class="social email-icon" href="">
-              <img src="../img/mail_black.svg" height="30" alt="Email" />
-            </a>
-            <a
-              target="_blank"
-              class="social"
-              href="https://facebook.com/KurzyJaponskeKaligrafie"
-            >
-              <img src="../img/fb_black.svg" height="30" alt="Facebook" />
-            </a>
-            <a
-              target="_blank"
-              class="social"
-              href="https://instagram.com/petra.vitaskova"
-            >
-              <img src="../img/ig_black.svg" height="30" alt="Instagram" />
-            </a>
-          </li>
-          <li><a href="#" class="menu-close">×</a></li>
-        </ul>
-      </nav>
-    </div>
+    <div id="menu-root"></div>
 
     <header>
       <video
@@ -124,7 +79,7 @@
             <div class="row portraits">
               <div class="col-6">
                 <figure>
-                  <img src="../img/petra.png" />
+                  <img src="../img/petra.jpg" />
                 </figure>
               </div>
               <div class="col-6 newline"></div>
@@ -270,7 +225,7 @@
         </div>
         <div class="col-12 dhide">
           <figure>
-            <img src="../gallery/petra.png" />
+            <img src="../gallery/petra.jpg" />
           </figure>
         </div>
         <div class="col-12">
