--- a/en/obchod.html
+++ b/en/obchod.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="../style.css?v=47">
         <link rel="stylesheet" href="../mobile-styles.css?v=2">
         <script type="text/javascript" src="../script.js?v=11"></script>
+        <script type="text/javascript" src="../menu.js?v=1"></script>
         <script type="text/javascript" src="../qrcode.min.js"></script>
         <script>
             // Wait for the page to load completely
@@ -46,40 +47,7 @@
     </head>
 
     <body>
-        <div class="hamburger-menu">
-            <div class="language-switcher">
-                <a href="../obchod.html" class="lang-flag" data-lang="cs" title="Přepnout do češtiny">
-                    <img src="../img/002-czech-republic.svg" height="24" alt="Čeština">
-                </a>
-            </div>
-            <button class="hamburger" id="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-            <nav class="menu-overlay" id="menuOverlay">
-                <ul>
-                    <li><a href="index.html">About Me</a></li>
-                    <li><a href="obchod.html">Shop</a></li>
-                    <li><a href="vystavy.html">Exhibitions</a></li>
-                    <li><a href="galerie.html">Gallery</a></li>
-                    <li><a href="skola.html">Iroha school</a></li>
-                    <li><a href="kontakt.html">Contact</a></li>
-                    <li class="menu-social">
-                        <a class="social email-icon" href="">
-                            <img src="../img/mail_black.svg" height="30" alt="Email">
-                        </a>
-                        <a target="_blank" class="social" href="https://facebook.com/KurzyJaponskeKaligrafie">
-                            <img src="../img/fb_black.svg" height="30" alt="Facebook">
-                        </a>
-                        <a target="_blank" class="social" href="https://instagram.com/petra.vitaskova">
-                            <img src="../img/ig_black.svg" height="30" alt="Instagram">
-                        </a>
-                    </li>
-                    <li><a href="#" class="menu-close">×</a></li>
-                </ul>
-            </nav>
-        </div>
+        <div id="menu-root"></div>
 
 
         <main>
@@ -216,7 +184,7 @@
                 </div>
                 <div class="col-12 dhide">
                     <figure>
-                        <img src="../gallery/petra.png">
+                        <img src="../gallery/petra.jpg">
                     </figure>
                 </div>
                 <div class="col-12">
