--- a/galerie.html
+++ b/galerie.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="gallery-loader.js"></script>
     <script type="text/javascript" src="gallery-data-manager.js"></script>
     <script type="text/javascript" src="script.js?v=12"></script>
+    <script type="text/javascript" src="menu.js?v=1"></script>
 
     <script>
       document.addEventListener("DOMContentLoaded", function () {
@@ -37,11 +38,7 @@
 
               if (validImages.length > 5) {
                 // Počkat na více obrázků
-                console.log(
-                  "Initializing MaterialPhotoGallery with",
-                  validImages.length,
-                  "valid images"
-                );
+
                 try {
                   // Počkat ještě déle, aby se obrázky správně vykreslily
                   setTimeout(function () {
@@ -54,9 +51,7 @@
                       ) {
                         new MaterialPhotoGallery(elem);
                         elem.dataset.initialized = "true";
-                        console.log(
-                          "MaterialPhotoGallery initialized successfully"
-                        );
+
                       }
                     } catch (initError) {
                       console.error(
@@ -87,11 +82,6 @@
                   }, 2000);
                 }
               } else {
-                console.log(
-                  "Not enough valid images found (" +
-                    validImages.length +
-                    "), retrying in 2000ms..."
-                );
                 setTimeout(initializeGallery, 2000);
               }
             });
@@ -209,53 +199,7 @@
     </script>
   </head>
   <body>
-    <div class="hamburger-menu">
-      <div class="language-switcher">
-        <a
-          href="en/galerie.html"
-          class="lang-flag"
-          data-lang="en"
-          title="Switch to English"
-        >
-          <img src="img/001-united-kingdom.svg" height="24" alt="English" />
-        </a>
-      </div>
-      <button class="hamburger" id="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-      <nav class="menu-overlay" id="menuOverlay">
-        <ul>
-          <li><a href="index.html">O mě</a></li>
-          <li><a href="obchod.html">Obchod</a></li>
-          <li><a href="vystavy.html">Výstavy</a></li>
-          <li><a href="galerie.html">Galerie</a></li>
-          <li><a href="skola.html">Škola Iroha</a></li>
-          <li><a href="kontakt.html">Kontakt</a></li>
-          <li class="menu-social">
-            <a class="social email-icon" href="">
-              <img src="img/mail_black.svg" height="30" alt="Email" />
-            </a>
-            <a
-              target="_blank"
-              class="social"
-              href="https://facebook.com/KurzyJaponskeKaligrafie"
-            >
-              <img src="img/fb_black.svg" height="30" alt="Facebook" />
-            </a>
-            <a
-              target="_blank"
-              class="social"
-              href="https://instagram.com/petra.vitaskova"
-            >
-              <img src="img/ig_black.svg" height="30" alt="Instagram" />
-            </a>
-          </li>
-          <li><a href="#" class="menu-close">×</a></li>
-        </ul>
-      </nav>
-    </div>
+    <div id="menu-root"></div>
 
     <main>
       <div class="contact">
