--- a/obchod.html
+++ b/obchod.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="style.css?v=47">
         <link rel="stylesheet" href="mobile-styles.css?v=2">
         <script type="text/javascript" src="script.js?v=11"></script>
+        <script type="text/javascript" src="menu.js?v=1"></script>
         <script type="text/javascript" src="qrcode.min.js"></script>
         <script>
             // Počkat, až se načte celá stránka
@@ -45,53 +46,7 @@
     </head>
 
     <body>
-        <div class="hamburger-menu">
-          <div class="language-switcher">
-            <a
-              href="en/obchod.html"
-              class="lang-flag"
-              data-lang="en"
-              title="Switch to English"
-            >
-              <img src="img/001-united-kingdom.svg" height="24" alt="English" />
-            </a>
-          </div>
-          <button class="hamburger" id="hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
-          </button>
-          <nav class="menu-overlay" id="menuOverlay">
-            <ul>
-              <li><a href="index.html">O mě</a></li>
-              <li><a href="obchod.html">Obchod</a></li>
-              <li><a href="vystavy.html">Výstavy</a></li>
-              <li><a href="galerie.html">Galerie</a></li>
-              <li><a href="skola.html">Škola Iroha</a></li>
-              <li><a href="kontakt.html">Kontakt</a></li>
-              <li class="menu-social">
-                <a class="social email-icon" href="">
-                  <img src="img/mail_black.svg" height="30" alt="Email" />
-                </a>
-                <a
-                  target="_blank"
-                  class="social"
-                  href="https://facebook.com/KurzyJaponskeKaligrafie"
-                >
-                  <img src="img/fb_black.svg" height="30" alt="Facebook" />
-                </a>
-                <a
-                  target="_blank"
-                  class="social"
-                  href="https://instagram.com/petra.vitaskova"
-                >
-                  <img src="img/ig_black.svg" height="30" alt="Instagram" />
-                </a>
-              </li>
-              <li><a href="#" class="menu-close">×</a></li>
-            </ul>
-          </nav>
-        </div>
+        <div id="menu-root"></div>
 
         <main>
             <div class="contact">
@@ -230,7 +185,7 @@
                 </div>
                 <div class="col-12 dhide">
                     <figure>
-                        <img src="gallery/petra.png">
+                        <img src="gallery/petra.jpg">
                     </figure>
                 </div>
 
