--- a/en/index.html
+++ b/en/index.html
@@ -35,7 +35,7 @@
           class="social"
           href="https://facebook.com/KurzyJaponskeKaligrafie"
         >
-          <img
+          <img loading="lazy"
             src="../img/fb_black.svg"
             height="40"
             alt="Facebook Japanese Calligraphy Petra Vitásková"
@@ -46,14 +46,14 @@
           class="social"
           href="https://instagram.com/petra.vitaskova"
         >
-          <img
+          <img loading="lazy"
             src="../img/ig_black.svg"
             height="40"
             alt="Instagram Japanese Calligraphy Petra Vitásková"
           />
         </a>
         <a class="social email-icon" href="">
-          <img src="../img/mail_black.svg" height="40" alt="Email" />
+          <img loading="lazy" src="../img/mail_black.svg" height="40" alt="Email" />
         </a>
       </div>
       <div class="container">
@@ -79,19 +79,19 @@
             <div class="row portraits">
               <div class="col-6">
                 <figure>
-                  <img src="../img/petra.jpg" />
+                  <img loading="lazy" src="../img/petra.jpg" />
                 </figure>
               </div>
               <div class="col-6 newline"></div>
               <div class="col-6">
                 <figure>
-                  <img src="../img/akiko.png" />
+                  <img loading="lazy" src="../img/akiko.png" />
                   <figcaption>Akiko Crowther</figcaption>
                 </figure>
               </div>
               <div class="col-6">
                 <figure>
-                  <img src="../img/kaori.png" />
+                  <img loading="lazy" src="../img/kaori.png" />
                   <figcaption>Kaori Ishijima</figcaption>
                 </figure>
               </div>
@@ -126,7 +126,7 @@
                 Association of Oriental Calligraphic Art.
               </p>
               <figure>
-                <img class="basen" src="../img/basen.png" />
+                <img loading="lazy" class="basen" src="../img/basen.png" />
               </figure>
             </div>
           </div>
@@ -134,7 +134,7 @@
         <div class="row">
           <div class="col-12">
             <figure class="w100">
-              <img
+              <img loading="lazy"
                 class="phototeachers"
                 src="../gallery/PHOTO-2025-03-15-12-11-39.png"
               />
@@ -150,7 +150,7 @@
           <div class="col-6">
             <h2>Awards</h2>
             <figure class="drops">
-              <img src="../img/kapky.gif" height="182px" />
+              <img loading="lazy" src="../img/kapky.gif" height="182px" />
             </figure>
           </div>
           <div class="col-6 medals">
@@ -225,24 +225,24 @@
         </div>
         <div class="col-12 dhide">
           <figure>
-            <img src="../gallery/petra.jpg" />
+            <img loading="lazy" src="../gallery/petra.jpg" />
           </figure>
         </div>
         <div class="col-12">
-          <img src="../img/kritiku.jpg" />
+          <img loading="lazy" src="../img/kritiku.jpg" />
         </div>
       </div>
     </main>
     <footer class="contact">
       <a class="social email-icon" href="">
-        <img src="../img/mail_white.svg" height="40" alt="Email" />
+        <img loading="lazy" src="../img/mail_white.svg" height="40" alt="Email" />
       </a>
       <a
         target="_blank"
         class="social"
         href="https://facebook.com/KurzyJaponskeKaligrafie"
       >
-        <img
+        <img loading="lazy"
           src="../img/fb_white.svg"
           height="40"
           alt="Facebook Japanese Calligraphy Petra Vitásková"
@@ -253,7 +253,7 @@
         class="social"
         href="https://instagram.com/petra.vitaskova"
       >
-        <img
+        <img loading="lazy"
           src="../img/ig_white.svg"
           height="40"
           alt="Instagram Japanese Calligraphy Petra Vitásková"
