--- a/en/kontakt.html
+++ b/en/kontakt.html
@@ -19,7 +19,7 @@
           class="social"
           href="https://facebook.com/KurzyJaponskeKaligrafie"
         >
-          <img
+          <img loading="lazy"
             src="../img/fb_black.svg"
             height="40"
             alt="Facebook Japanese Calligraphy Petra Vitásková"
@@ -30,14 +30,14 @@
           class="social"
           href="https://instagram.com/petra.vitaskova"
         >
-          <img
+          <img loading="lazy"
             src="../img/ig_black.svg"
             height="40"
             alt="Instagram Japanese Calligraphy Petra Vitásková"
           />
         </a>
         <a class="social email-icon" href="">
-          <img src="../img/mail_black.svg" height="40" alt="Email" />
+          <img loading="lazy" src="../img/mail_black.svg" height="40" alt="Email" />
         </a>
       </div>
 
@@ -60,24 +60,24 @@
         </div>
         <div class="row">
           <div class="col-6 kontakt m-p-g">
-            <img src="../img/dlouha01.jpg" alt="Dlouha 1" />
-            <img src="../img/dlouha02.jpg" alt="Dlouha 2" />
-            <img src="../img/dlouha03.jpg" alt="Dlouha 3" />
-            <img src="../img/dlouha04.jpg" alt="Dlouha 4" />
+            <img loading="lazy" src="../img/dlouha01.jpg" alt="Dlouha 1" />
+            <img loading="lazy" src="../img/dlouha02.jpg" alt="Dlouha 2" />
+            <img loading="lazy" src="../img/dlouha03.jpg" alt="Dlouha 3" />
+            <img loading="lazy" src="../img/dlouha04.jpg" alt="Dlouha 4" />
           </div>
         </div>
       </div>
     </main>
     <footer class="contact">
       <a class="social email-icon" href="">
-        <img src="../img/mail_white.svg" height="40" alt="Email" />
+        <img loading="lazy" src="../img/mail_white.svg" height="40" alt="Email" />
       </a>
       <a
         target="_blank"
         class="social"
         href="https://facebook.com/KurzyJaponskeKaligrafie"
       >
-        <img
+        <img loading="lazy"
           src="../img/fb_white.svg"
           height="40"
           alt="Facebook Japanese Calligraphy Petra Vitásková"
@@ -88,7 +88,7 @@
         class="social"
         href="https://instagram.com/petra.vitaskova"
       >
-        <img
+        <img loading="lazy"
           src="../img/ig_white.svg"
           height="40"
           alt="Instagram Japanese Calligraphy Petra Vitásková"
