--- a/en/obchod.html
+++ b/en/obchod.html
@@ -57,7 +57,7 @@
                 class="social"
                 href="https://facebook.com/KurzyJaponskeKaligrafie"
               >
-                <img
+                <img loading="lazy"
                   src="../img/fb_black.svg"
                   height="40"
                   alt="Facebook Japanese Calligraphy Petra Vitásková"
@@ -68,14 +68,14 @@
                 class="social"
                 href="https://instagram.com/petra.vitaskova"
               >
-                <img
+                <img loading="lazy"
                   src="../img/ig_black.svg"
                   height="40"
                   alt="Instagram Japanese Calligraphy Petra Vitásková"
                 />
               </a>
               <a class="social email-icon" href="">
-                <img
+                <img loading="lazy"
                   src="../img/mail_black.svg"
                   height="40"
                   alt="Email"
@@ -127,7 +127,7 @@
                         <!-- Artwork 1 -->
                         <div class="obraz">
                             <div class="obraz-nahled">
-                                <img src="../qr-codes/Frame.jpg" alt="Sunset Over Mountains">
+                                <img loading="lazy" src="../qr-codes/Frame.jpg" alt="Sunset Over Mountains">
                             </div>
                             <h3>Sunset Over Mountains</h3>
                             <div class="cena">5,000 CZK</div>
@@ -143,7 +143,7 @@
                         <!-- Artwork 2 -->
                         <div class="obraz">
                             <div class="obraz-nahled">
-                                <img src="../qr-codes/Frame.jpg" alt="Ocean Waves">
+                                <img loading="lazy" src="../qr-codes/Frame.jpg" alt="Ocean Waves">
                             </div>
                             <h3>Ocean Waves</h3>
                             <div class="cena">7,500 CZK</div>
@@ -159,7 +159,7 @@
                         <!-- Artwork 3 -->
                         <div class="obraz">
                             <div class="obraz-nahled">
-                                <img src="../qr-codes/Frame.jpg" alt="Abstract Dreams">
+                                <img loading="lazy" src="../qr-codes/Frame.jpg" alt="Abstract Dreams">
                             </div>
                             <h3>Abstract Dreams</h3>
                             <div class="cena">6,000 CZK</div>
@@ -184,27 +184,27 @@
                 </div>
                 <div class="col-12 dhide">
                     <figure>
-                        <img src="../gallery/petra.jpg">
+                        <img loading="lazy" src="../gallery/petra.jpg">
                     </figure>
                 </div>
                 <div class="col-12">
-                    <img src="../img/kritiku.jpg">
+                    <img loading="lazy" src="../img/kritiku.jpg">
                 </div>
             </div>
         </main>
         <footer class="contact">
               <a class="social email-icon" href="">
-                <img
+                <img loading="lazy"
                   src="../img/mail_white.svg"
                   height="40"
                   alt="Email"
                 />
               </a>
                 <a target="_blank" class="social" href="https://facebook.com/KurzyJaponskeKaligrafie">
-                    <img src="../img/fb_white.svg" height="40" alt="Facebook Japanese Calligraphy Petra Vitásková">
+                    <img loading="lazy" src="../img/fb_white.svg" height="40" alt="Facebook Japanese Calligraphy Petra Vitásková">
                 </a>
                 <a target="_blank" class="social" href="https://instagram.com/petra.vitaskova">
-                    <img src="../img/ig_white.svg" height="40" alt="Instagram Japanese Calligraphy Petra Vitásková">
+                    <img loading="lazy" src="../img/ig_white.svg" height="40" alt="Instagram Japanese Calligraphy Petra Vitásková">
                 </a>
         </footer>
 
