--- a/galerie.html
+++ b/galerie.html
@@ -200,7 +200,7 @@
           class="social"
           href="https://facebook.com/KurzyJaponskeKaligrafie"
         >
-          <img
+          <img loading="lazy"
             src="img/fb_black.svg"
             height="40"
             alt="Facebook Japonská kaligrafie Petra Vitásková"
@@ -211,14 +211,14 @@
           class="social"
           href="https://instagram.com/petra.vitaskova"
         >
-          <img
+          <img loading="lazy"
             src="img/ig_black.svg"
             height="40"
             alt="Instagram Japonská kaligrafie Petra Vitásková"
           />
         </a>
         <a class="social email-icon" href="">
-          <img src="img/mail_black.svg" height="40" alt="Email" />
+          <img loading="lazy" src="img/mail_black.svg" height="40" alt="Email" />
         </a>
       </div>
 
@@ -275,24 +275,24 @@
         </div>
         <div class="col-12 dhide">
           <figure>
-            <img src="gallery/petra.jpg" />
+            <img loading="lazy" src="gallery/petra.jpg" />
           </figure>
         </div>
         <div class="col-12">
-          <img src="img/kritiku.jpg" />
+          <img loading="lazy" src="img/kritiku.jpg" />
         </div>
       </div>
     </main>
     <footer class="contact">
       <a class="social email-icon" href="">
-        <img src="img/mail_white.svg" height="40" alt="Email" />
+        <img loading="lazy" src="img/mail_white.svg" height="40" alt="Email" />
       </a>
       <a
         target="_blank"
         class="social"
         href="https://facebook.com/KurzyJaponskeKaligrafie"
       >
-        <img
+        <img loading="lazy"
           src="img/fb_white.svg"
           height="40"
           alt="Facebook Japonská kaligrafie Petra Vitásková"
@@ -303,7 +303,7 @@
         class="social"
         href="https://instagram.com/petra.vitaskova"
       >
-        <img
+        <img loading="lazy"
           src="img/ig_white.svg"
           height="40"
           alt="Instagram Japonská kaligrafie Petra Vitásková"
