--- a/obchod.html
+++ b/obchod.html
@@ -55,7 +55,7 @@
                 class="social"
                 href="https://facebook.com/KurzyJaponskeKaligrafie"
               >
-                <img
+                <img loading="lazy"
                   src="img/fb_black.svg"
                   height="40"
                   alt="Facebook Japonská kaligrafie Petra Vitásková"
@@ -66,14 +66,14 @@
                 class="social"
                 href="https://instagram.com/petra.vitaskova"
               >
-                <img
+                <img loading="lazy"
                   src="img/ig_black.svg"
                   height="40"
                   alt="Instagram Japonská kaligrafie Petra Vitásková"
                 />
               </a>
               <a class="social email-icon" href="">
-                <img
+                <img loading="lazy"
                   src="img/mail_black.svg"
                   height="40"
                   alt="Email"
@@ -93,7 +93,7 @@
                             <!-- Obraz 1 -->
                             <div class="obraz">
                                 <div class="obraz-nahled">
-                                <img src="qr-codes/Frame.jpg" alt="Nad horami">
+                                <img loading="lazy" src="qr-codes/Frame.jpg" alt="Nad horami">
                             </div>
                             <h3>Nad horami</h3>
                             <div class="cena">5 000 Kč</div>
@@ -109,7 +109,7 @@
                         <!-- Obraz 2 -->
                         <div class="obraz">
                             <div class="obraz-nahled">
-                                <img src="qr-codes/Frame.jpg" alt="Oceánské vlny">
+                                <img loading="lazy" src="qr-codes/Frame.jpg" alt="Oceánské vlny">
                             </div>
                             <h3>Oceánské vlny</h3>
                             <div class="cena">7 500 Kč</div>
@@ -125,7 +125,7 @@
                         <!-- Obraz 3 -->
                         <div class="obraz">
                             <div class="obraz-nahled">
-                                <img src="qr-codes/Frame.jpg" alt="Abstraktní sny">
+                                <img loading="lazy" src="qr-codes/Frame.jpg" alt="Abstraktní sny">
                             </div>
                             <h3>Abstraktní sny</h3>
                             <div class="cena">6 000 Kč</div>
@@ -185,7 +185,7 @@
                 </div>
                 <div class="col-12 dhide">
                     <figure>
-                        <img src="gallery/petra.jpg">
+                        <img loading="lazy" src="gallery/petra.jpg">
                     </figure>
                 </div>
 
@@ -193,17 +193,17 @@
         </main>
         <footer class="contact">
                 <a class="social email-icon" href="">
-                  <img
+                  <img loading="lazy"
                     src="img/mail_white.svg"
                     height="40"
                     alt="Email"
                   />
                 </a>
                 <a target="_blank" class="social" href="https://facebook.com/KurzyJaponskeKaligrafie">
-                    <img src="img/fb_white.svg" height="40" alt="Facebook Japonská kaligrafie Petra Vitásková">
+                    <img loading="lazy" src="img/fb_white.svg" height="40" alt="Facebook Japonská kaligrafie Petra Vitásková">
                 </a>
                 <a target="_blank" class="social" href="https://instagram.com/petra.vitaskova">
-                    <img src="img/ig_white.svg" height="40" alt="Instagram Japonská kaligrafie Petra Vitásková">
+                    <img loading="lazy" src="img/ig_white.svg" height="40" alt="Instagram Japonská kaligrafie Petra Vitásková">
                 </a>
         </footer>
     </body>
