--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           class="social"
           href="https://facebook.com/KurzyJaponskeKaligrafie"
         >
-          <img
+          <img loading="lazy"
             src="img/fb_black.svg"
             height="40"
             alt="Facebook Japonská kaligrafie Petra Vitásková"
@@ -46,14 +46,14 @@
           class="social"
           href="https://instagram.com/petra.vitaskova"
         >
-          <img
+          <img loading="lazy"
             src="img/ig_black.svg"
             height="40"
             alt="Instagram Japonská kaligrafie Petra Vitásková"
           />
         </a>
         <a class="social email-icon" href="">
-          <img src="img/mail_black.svg" height="40" alt="Email" />
+          <img loading="lazy" src="img/mail_black.svg" height="40" alt="Email" />
         </a>
       </div>
       <div class="container">
@@ -78,19 +78,19 @@
             <div class="row portraits">
               <div class="col-6">
                 <figure>
-                  <img src="img/petra.jpg" />
+                  <img loading="lazy" src="img/petra.jpg" />
                 </figure>
               </div>
               <div class="col-6 newline"></div>
               <div class="col-6">
                 <figure>
-                  <img src="img/akiko.png" />
+                  <img loading="lazy" src="img/akiko.png" />
                   <figcaption>Akiko Crowther</figcaption>
                 </figure>
               </div>
               <div class="col-6">
                 <figure>
-                  <img src="img/kaori.png" />
+                  <img loading="lazy" src="img/kaori.png" />
                   <figcaption>Kaori Ishijima</figcaption>
                 </figure>
               </div>
@@ -125,7 +125,7 @@
                 orientálního kaligrafického umění.
               </p>
               <figure>
-                <img class="basen" src="img/basen.png" />
+                <img loading="lazy" class="basen" src="img/basen.png" />
               </figure>
             </div>
           </div>
@@ -133,7 +133,7 @@
         <div class="row">
           <div class="col-12">
             <figure class="w100">
-              <img
+              <img loading="lazy"
                 class="phototeachers"
                 src="gallery/PHOTO-2025-03-15-12-11-39.png"
               />
@@ -150,7 +150,7 @@
           <div class="col-6">
             <h2>Ocenění</h2>
             <figure class="drops">
-              <img src="img/kapky.gif" height="182px" />
+              <img loading="lazy" src="img/kapky.gif" height="182px" />
             </figure>
           </div>
           <div class="col-6 medals">
@@ -224,24 +224,24 @@
         </div>
         <div class="col-12 dhide">
           <figure>
-            <img src="gallery/petra.jpg" />
+            <img loading="lazy" src="gallery/petra.jpg" />
           </figure>
         </div>
         <div class="col-12">
-          <img src="img/kritiku.jpg" />
+          <img loading="lazy" src="img/kritiku.jpg" />
         </div>
       </div>
     </main>
     <footer class="contact">
         <a class="social email-icon" href="">
-          <img src="img/mail_white.svg" height="40" alt="Email" />
+          <img loading="lazy" src="img/mail_white.svg" height="40" alt="Email" />
         </a>
       <a
         target="_blank"
         class="social"
         href="https://facebook.com/KurzyJaponskeKaligrafie"
       >
-        <img
+        <img loading="lazy"
           src="img/fb_white.svg"
           height="40"
           alt="Facebook Japonská kaligrafie Petra Vitásková"
@@ -252,7 +252,7 @@
         class="social"
         href="https://instagram.com/petra.vitaskova"
       >
-        <img
+        <img loading="lazy"
           src="img/ig_white.svg"
           height="40"
           alt="Instagram Japonská kaligrafie Petra Vitásková"
