--- a/en/kontakt.html
+++ b/en/kontakt.html
@@ -68,32 +68,7 @@
         </div>
       </div>
     </main>
-    <footer class="contact">
-      <a class="social email-icon" href="">
-        <img loading="lazy" src="../img/mail_white.svg" height="40" alt="Email" />
-      </a>
-      <a
-        target="_blank"
-        class="social"
-        href="https://facebook.com/KurzyJaponskeKaligrafie"
-      >
-        <img loading="lazy"
-          src="../img/fb_white.svg"
-          height="40"
-          alt="Facebook Japanese Calligraphy Petra Vitásková"
-        />
-      </a>
-      <a
-        target="_blank"
-        class="social"
-        href="https://instagram.com/petra.vitaskova"
-      >
-        <img loading="lazy"
-          src="../img/ig_white.svg"
-          height="40"
-          alt="Instagram Japanese Calligraphy Petra Vitásková"
-        />
-      </a>
-    </footer>
+    <div id="footer-root"></div>
+    <script type="text/javascript" src="../footer.js?v=1"></script>
   </body>
 </html>
