--- a/en/skola.html
+++ b/en/skola.html
@@ -83,32 +83,7 @@
         </div>
       </div>
     </main>
-    <footer class="contact">
-      <a class="social email-icon" href="">
-        <img src="../img/mail_white.svg" height="40" alt="Email" />
-      </a>
-      <a
-        target="_blank"
-        class="social"
-        href="https://facebook.com/KurzyJaponskeKaligrafie"
-      >
-        <img
-          src="../img/fb_white.svg"
-          height="40"
-          alt="Japanese Calligraphy Petra Vitaskova"
-        />
-      </a>
-      <a
-        target="_blank"
-        class="social"
-        href="https://instagram.com/petra.vitaskova"
-      >
-        <img
-          src="../img/ig_white.svg"
-          height="40"
-          alt="Japanese Calligraphy Petra Vitaskova"
-        />
-      </a>
-    </footer>
+    <div id="footer-root"></div>
+    <script type="text/javascript" src="../footer.js?v=1"></script>
   </body>
 </html>
