--- a/skola.html
+++ b/skola.html
@@ -82,32 +82,7 @@
         </div>
       </div>
     </main>
-    <footer class="contact">
-      <a class="social email-icon" href="">
-        <img src="img/mail_white.svg" height="40" alt="Email" />
-      </a>
-      <a
-        target="_blank"
-        class="social"
-        href="https://facebook.com/KurzyJaponskeKaligrafie"
-      >
-        <img
-          src="img/fb_white.svg"
-          height="40"
-          alt="Facebook Japonská kaligrafie Petra Vitásková"
-        />
-      </a>
-      <a
-        target="_blank"
-        class="social"
-        href="https://instagram.com/petra.vitaskova"
-      >
-        <img
-          src="img/ig_white.svg"
-          height="40"
-          alt="Instagram Japonská kaligrafie Petra Vitásková"
-        />
-      </a>
-    </footer>
+    <div id="footer-root"></div>
+    <script type="text/javascript" src="footer.js?v=1"></script>
   </body>
 </html>
