--- a/en/index.html
+++ b/en/index.html
@@ -78,9 +78,6 @@
           <div class="col-6">
             <div class="row portraits">
               <div class="col-6">
-                <figure>
-                  <img loading="lazy" src="../img/petra.jpg" />
-                </figure>
               </div>
               <div class="col-6 newline"></div>
               <div class="col-6">
@@ -233,7 +230,8 @@
         </div>
       </div>
     </main>
-    <div id="footer-root"></div>
+    <div id="footer-root">
+    </div>
     <script type="text/javascript" src="../footer.js?v=1"></script>
   </body>
 </html>
