--- a/obchod.html
+++ b/obchod.html
@@ -41,6 +41,39 @@
                     colorDark: "#333333",
                     colorLight: "#ffffff"
                 });
+
+                // QR kód 4
+                const platba4 = "SPD*1.0*ACC:CZ6508000000001234567890*AM:5000.00*CC:CZK*MSG:Obraz Sunset 2*X-VS:004";
+                var qr4El = document.getElementById("qr4");
+                if (qr4El) new QRCode(qr4El, {
+                    text: platba4,
+                    width: 180,
+                    height: 180,
+                    colorDark: "#333333",
+                    colorLight: "#ffffff"
+                });
+
+                // QR kód 5
+                const platba5 = "SPD*1.0*ACC:CZ6508000000001234567890*AM:7500.00*CC:CZK*MSG:Obraz Ocean 2*X-VS:005";
+                var qr5El = document.getElementById("qr5");
+                if (qr5El) new QRCode(qr5El, {
+                    text: platba5,
+                    width: 180,
+                    height: 180,
+                    colorDark: "#333333",
+                    colorLight: "#ffffff"
+                });
+
+                // QR kód 6
+                const platba6 = "SPD*1.0*ACC:CZ6508000000001234567890*AM:6000.00*CC:CZK*MSG:Obraz Abstract 2*X-VS:006";
+                var qr6El = document.getElementById("qr6");
+                if (qr6El) new QRCode(qr6El, {
+                    text: platba6,
+                    width: 180,
+                    height: 180,
+                    colorDark: "#333333",
+                    colorLight: "#ffffff"
+                });
             });
         </script>
     </head>
@@ -93,7 +126,7 @@
                             <!-- Obraz 1 -->
                             <div class="obraz">
                                 <div class="obraz-nahled">
-                                <img loading="lazy" src="qr-codes/Frame.jpg" alt="Nad horami">
+                                <img loading="lazy" src="obchod/6f39ecd3-d386-473d-8e6c-34136b383979.jpg" alt="Nad horami">
                             </div>
                             <h3>Nad horami</h3>
                             <div class="cena">5 000 Kč</div>
@@ -109,7 +142,7 @@
                         <!-- Obraz 2 -->
                         <div class="obraz">
                             <div class="obraz-nahled">
-                                <img loading="lazy" src="qr-codes/Frame.jpg" alt="Oceánské vlny">
+                                <img loading="lazy" src="obchod/cb600632-45ed-4ab1-9961-377612953176.jpg" alt="Oceánské vlny">
                             </div>
                             <h3>Oceánské vlny</h3>
                             <div class="cena">7 500 Kč</div>
@@ -125,7 +158,7 @@
                         <!-- Obraz 3 -->
                         <div class="obraz">
                             <div class="obraz-nahled">
-                                <img loading="lazy" src="qr-codes/Frame.jpg" alt="Abstraktní sny">
+                                <img loading="lazy" src="obchod/8c90274f-bdb0-4036-9216-c25457cbce3f.jpg" alt="Abstraktní sny">
                             </div>
                             <h3>Abstraktní sny</h3>
                             <div class="cena">6 000 Kč</div>
@@ -135,6 +168,54 @@
                                 <strong>Bankovní platba:</strong><br>
                                 Účet: 123456789/0800<br>
                                 VS: 003
+                            </div>
+                        </div>
+
+                        <!-- Obraz 4 -->
+                        <div class="obraz">
+                            <div class="obraz-nahled">
+                                <img loading="lazy" src="obchod/8233bc90-689b-402a-812f-a83be669f785.jpg" alt="Nad horami">
+                            </div>
+                            <h3>Nad horami</h3>
+                            <div class="cena">5 000 Kč</div>
+                            <div id="qr4" class="qr-container"></div>
+                            <p class="instrukce">Naskenuj QR kód pro platbu</p>
+                            <div class="platebni-info">
+                                <strong>Bankovní platba:</strong><br>
+                                Účet: 123456789/0800<br>
+                                VS: 004
+                            </div>
+                        </div>
+
+                        <!-- Obraz 5 -->
+                        <div class="obraz">
+                            <div class="obraz-nahled">
+                                <img loading="lazy" src="obchod/59f9cbd6-13d4-45ac-af20-38476dd49c70.jpg" alt="Oceánské vlny">
+                            </div>
+                            <h3>Oceánské vlny</h3>
+                            <div class="cena">7 500 Kč</div>
+                            <div id="qr5" class="qr-container"></div>
+                            <p class="instrukce">Naskenuj QR kód pro platbu</p>
+                            <div class="platebni-info">
+                                <strong>Bankovní platba:</strong><br>
+                                Účet: 123456789/0800<br>
+                                VS: 005
+                            </div>
+                        </div>
+
+                        <!-- Obraz 6 -->
+                        <div class="obraz">
+                            <div class="obraz-nahled">
+                                <img loading="lazy" src="obchod/1976dad2-9822-4a8f-b80f-7d26cea62566.jpg" alt="Abstraktní sny">
+                            </div>
+                            <h3>Abstraktní sny</h3>
+                            <div class="cena">6 000 Kč</div>
+                            <div id="qr6" class="qr-container"></div>
+                            <p class="instrukce">Naskenuj QR kód pro platbu</p>
+                            <div class="platebni-info">
+                                <strong>Bankovní platba:</strong><br>
+                                Účet: 123456789/0800<br>
+                                VS: 006
                             </div>
                         </div>
                     </div>
