css - interspace & continue

--- a/en/index.html
+++ b/en/index.html
@@ -77,6 +77,9 @@
           <div class="col-6">
             <div class="row portraits">
               <div class="col-6">
+                 <figure>
+                  <img loading="lazy" src="../img/petra.png" />
+                </figure>
               </div>
               <div class="col-6 newline"></div>
               <div class="col-6">
@@ -131,7 +134,7 @@
           <div class="col-12">
             <figure class="w100">
               <img loading="lazy"
-                class="phototeachers"
+                class="photo-centric"
                 src="../gallery/PHOTO-2025-03-15-12-11-39.png"
               />
             </figure>
