--- a/en/index.html
+++ b/en/index.html
@@ -22,7 +22,7 @@
         <source src="../home_video.mp4" />
       </video>
       <h1>
-        Petra Vitásková <br /><strong>Zvuk štětce</strong>
+        <strong>Petra Vitaskova</strong><br />Sound of Brush
         <span class="hidden">Japanese Calligraphy</span>
       </h1>
     </header>
@@ -79,6 +79,7 @@
               <div class="col-6">
                  <figure>
                   <img loading="lazy" src="../img/petra.png" />
+                  <figcaption>Petra Vitásková</figcaption>
                 </figure>
               </div>
               <div class="col-6 newline"></div>
