--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <source src="home_video.mp4" />
       </video>
       <h1>
-        Petra Vitásková <br /><strong>Zvuk štětce</strong>
+        <strong>Petra Vitásková</strong><br />Zvuk štětce
         <span class="hidden">japonská kaligrafie</span>
       </h1>
     </header>
@@ -78,6 +78,7 @@
               <div class="col-6">
                <figure>
                   <img loading="lazy" src="img/petra.png" />
+                  <figcaption>Petra Vitásková</figcaption>
                 </figure>
               </div>
               <div class="col-6 newline"></div>
