--- a/en/index.html
+++ b/en/index.html
@@ -210,6 +210,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
+            <p>&nbsp;</p>
             <p>
               You can find the complete list of exhibitions on a separate page:
               <a href="vystavy.html" class="special-link">EXIBITIONS</a>
