--- a/en/obchod.html
+++ b/en/obchod.html
@@ -256,26 +256,27 @@
                     </div>
                 </div>
             </div>
-            <div class="container foot_foto">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="spacer height10">
-                            &nbsp;
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 dhide">
-                    <figure>
-                        <img loading="lazy" src="../gallery/petra.jpg">
-                    </figure>
-                </div>
-                <div class="col-12">
-                    <img loading="lazy" src="../img/kritiku.jpg">
-                </div>
-            </div>
         </main>
-        <div id="footer-root"></div>
-        <script type="text/javascript" src="../footer.js?v=1"></script>
+        
+      <div class="container foot_foto">
+        <div class="row">
+          <div class="col-12">
+            <div class="spacer height10">&nbsp;</div>
+          </div>
+        </div>
+        <div class="col-12 dhide">
+          <figure>
+            <img loading="lazy" src="../gallery/petra.jpg" />
+          </figure>
+        </div>
+        <div class="col-12">
+          <img loading="lazy" src="../img/kritiku.jpg" />
+        </div>
+      </div>
+
+    <div id="footer-root">
+    </div>
+    <script type="text/javascript" src="../footer.js?v=1"></script>
 
     </body>
 </html>
