--- a/en/vystavy.html
+++ b/en/vystavy.html
@@ -159,32 +159,26 @@
             <img src="../img/vystava2020_01.jpg" alt="poster exhibition Iroha, 2020" />
       </div>
     </main>
-    <footer class="contact">
-      <a class="social email-icon" href="">
-        <img src="../img/mail_white.svg" height="40" alt="Email" />
-      </a>
-      <a
-        target="_blank"
-        class="social"
-        href="https://facebook.com/KurzyJaponskeKaligrafie"
-      >
-        <img
-          src="../img/fb_white.svg"
-          height="40"
-          alt="Facebook Japanese Calligraphy Petra Vitásková"
-        />
-      </a>
-      <a
-        target="_blank"
-        class="social"
-        href="https://instagram.com/petra.vitaskova"
-      >
-        <img
-          src="../img/ig_white.svg"
-          height="40"
-          alt="Instagram Japanese Calligraphy Petra Vitásková"
-        />
-      </a>
-    </footer>
+ 
+      <div class="container foot_foto">
+        <div class="row">
+          <div class="col-12">
+            <div class="spacer height10">&nbsp;</div>
+          </div>
+        </div>
+        <div class="col-12 dhide">
+          <figure>
+            <img loading="lazy" src="../gallery/petra.jpg" />
+          </figure>
+        </div>
+        <div class="col-12">
+          <img loading="lazy" src="../img/kritiku.jpg" />
+        </div>
+      </div>
+
+    <div id="footer-root">
+    </div>
+    <script type="text/javascript" src="../footer.js?v=1"></script>
+
   </body>
 </html>
