--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
+            <p>&nbsp;</p>
             <p>
               Kompletní seznam výstav najdete na samostatné stránce:
               <a href="vystavy.html" class="special-link">VÝSTAVY</a>
@@ -216,6 +217,7 @@
           </div>
         </div>
       </div>
+      
       <div class="container foot_foto">
         <div class="row">
           <div class="col-12">
